--- a/home.html
+++ b/home.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body class="img-responsive" background="C:\Users\Madhu\Desktop\TNT\image\logoBackground.jpg">
     <div class="container">
@@ -19,12 +21,39 @@
         </div>
       </div>
 
-<div class="row">
+<div class="row carousel-holder">
   <div class="desktop-navbar ">
     <div class="desktop-navLinks">
-      <div class="desktop-navContent">
+
+ <div class="desktop-navContent">
         <a href="/shop/men" data-index="0" data-color="#ee5f73" data-type="navElements" class="desktop-main" style="border-bottom-color: rgb(238, 95, 115);">Spices</a>
-        </div>
+
+<div class="desktop-paneContent">
+<div class="desktop-categoryContainer" data-index="0" data-group="men" data-color="#ee5f73">
+
+<div class="desktop-navBlock">
+<a href="/men-topwear?src=tNav" class="desktop-categoryName" style="color: rgb(238, 95, 115);">Topwear</a>
+<a href="/men-tshirts?src=tNav" class="desktop-categoryLink">T-Shirts</a>
+<a href="/men-casual-shirts-menu?src=tNav" class="desktop-categoryLink">Casual Shirts</a>
+<a href="/men-formal-shirts-menu?src=tNav" class="desktop-categoryLink">Formal Shirts</a>
+<a href="/sweaters-and-sweatshirts-men-menu?src=tNav" class="desktop-categoryLink">Sweaters &amp; Sweatshirts</a>
+<a href="/men-jackets-menu?src=tNav" class="desktop-categoryLink">Jackets</a>
+<a href="/blazers-and-coats-men-menu?src=tNav" class="desktop-categoryLink">Blazers &amp; Coats</a>
+<a href="/men-suits?src=tNav" class="desktop-categoryLink">Suits</a>
+<a href="/men-bottomwear?src=tNav" class="desktop-categoryName" style="color: rgb(238, 95, 115);">Bottomwear</a>
+<a href="/men-jeans-menu" class="desktop-categoryLink">Jeans</a>
+<a href="/men-casual-trousers-menu?src=tNav" class="desktop-categoryLink">Casual Trousers</a>
+<a href="/men-formal-trousers-menu?src=tNav" class="desktop-categoryLink">Formal Trousers</a>
+<a href="/mens-shorts-menu?src=tNav" class="desktop-categoryLink">Shorts</a>
+<a href="/men-trackpants-menu?src=tNav" class="desktop-categoryLink">Track Pants</a>
+</div>
+
+
+
+</div>
+</div>
+
+</div>
         <div class="desktop-navContent">
         <a href="/shop/men" data-index="0" data-color="#ee5f73" data-type="navElements" class="desktop-main" style="border-bottom-color: rgb(238, 95, 115);">Honey</a>
       </div>
@@ -47,26 +76,52 @@
    </div>
 
 
-   <div class="row">
-        <div class="col-md-12">
-          <img class="img-responsive" src="C:\Users\Madhu\Desktop\TNT\image\spices.jpg">
-        </div>
-    </div>
 
-    <div class="row">
+        <div class="row carousel-holder">
+
+                    <div class="col-md-12">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class=""></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                           <div class="item">
+                            <img class="slide-image" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\egg.jpg" alt="">
+                                </div>
+                          <div class="item">
+                          <img class="slide-image" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\honey.jpg" alt="">
+                                </div>
+                         <div class="item active">
+                        <img class="slide-image" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\pepper.jpg" alt="">
+                                </div>
+                            </div>
+                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            </a>
+                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+      <div class="row">
         <div class="col-md-12">
-          <h2>Featured Work</h2>
+        <h3>Future Products</h3>
         </div>
-    </div>
+        </div>
 
     <div class="row">
         <div class="col-md-6">
-          <img class="img-responsive" src="C:\Users\Madhu\Desktop\TNT\image\vegitables.jpg">
+          <img class="img-responsive" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\vegitables.jpg">
           <h3>vegitables</h3>
           <p><a href="http://github.com">Link to project</a></p>
         </div>
         <div class="col-md-6">
-          <img class="img-responsive" src="C:\Users\Madhu\Desktop\TNT\image\NatureTouch.jpg">
+          <img class="img-responsive" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\NatureTouch.jpg">
           <h3>Nature</h3>
           <p><a href="http://github.com">Link to project</a></p>
         </div>
