--- a/home.html
+++ b/home.html
@@ -10,13 +10,13 @@
     <div class="container">
       <div class="row">
           <div class="desktopNavBarLogo">
-                <img class="img-responsive" src="C:\Users\Madhu\Desktop\TNT\image\Logo.jpg">
+                <img class="img-responsive" src="https://github.com/madhumaran/ecom/blob/master/image/Logo.jpg?raw=true">
           </div>
 
           <div class="desktopNavBar-right">
 
-                <a href="/shop/men" data-index="0" data-color="#ee5f73" data-type="navElements" class="desktop-main" style="border-bottom-color: rgb(238, 95, 115);">Myorder</a>
-                <a href="/shop/men" data-index="0" data-color="#ee5f73" data-type="navElements" class="desktop-main" style="border-bottom-color: rgb(238, 95, 115);">Login/signup</a>
+                <a href="/shop/men" data-index="0" data-color="#ee5f73" data-type="navElements" class="desktop-main" style="border-bottom-color: rgb(238, 95, 115);">MyOrder</a>
+                <a href="login.html" data-index="0" data-color="#ee5f73" data-type="navElements" class="desktop-main" style="border-bottom-color: rgb(238, 95, 115);">Login/SignUp</a>
 
         </div>
       </div>
@@ -88,13 +88,13 @@
                             </ol>
                             <div class="carousel-inner">
                            <div class="item">
-                            <img class="slide-image" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\egg.jpg" alt="">
+                            <img class="slide-image" class="img-rounded" src="https://github.com/madhumaran/ecom/blob/master/image/egg.jpg?raw=true" alt="">
                                 </div>
                           <div class="item">
-                          <img class="slide-image" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\honey.jpg" alt="">
+                          <img class="slide-image" class="img-rounded" src="https://github.com/madhumaran/ecom/blob/master/image/honey.jpg?raw=true" alt="">
                                 </div>
                          <div class="item active">
-                        <img class="slide-image" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\pepper.jpg" alt="">
+                        <img class="slide-image" class="img-rounded" src="https://github.com/madhumaran/ecom/blob/master/image/pepper.jpg?raw=true" alt="">
                                 </div>
                             </div>
                             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -116,12 +116,12 @@
 
     <div class="row">
         <div class="col-md-6">
-          <img class="img-responsive" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\vegitables.jpg">
-          <h3>vegitables</h3>
+          <img class="img-responsive" class="img-rounded" src="https://github.com/madhumaran/ecom/blob/master/image/vegitables.jpg?raw=true">
+          <h3>vegetables</h3>
           <p><a href="http://github.com">Link to project</a></p>
         </div>
         <div class="col-md-6">
-          <img class="img-responsive" class="img-rounded" src="C:\Users\Madhu\Desktop\TNT\image\NatureTouch.jpg">
+          <img class="img-responsive" class="img-rounded" src="https://github.com/madhumaran/ecom/blob/master/image/NatureTouch.jpg?raw=true">
           <h3>Nature</h3>
           <p><a href="http://github.com">Link to project</a></p>
         </div>
