--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link rel="stylesheet" type="text/css" href="css/signup.css">
 </head>
 <body>
 
@@ -31,7 +31,7 @@
 <div class="register-input-item"><input type="Password" class="register-user-input-email register-user-input" name="email" placeholder="Confirm Password"></div>
 </fieldset>
 <fieldset class="login-input-container">	
-<div class="register-input-item"><select class="register-user-input-email register-user-input" name="email" placeholder="Country"></div><option></option></select>
+<div class="register-input-item"><select class="register-user-input-email register-user-input" name="email" placeholder="Country"></div><option>India</option></select>
 </fieldset>
 
 
